# Brusselator

./: CMakeLists.txt  README.md  brusselator_mpi.cpp  brusselator_mpi_extended.cpp  brusselator_mpi_mixedPrec.cpp  build_script.sh  dualSystemEq.hpp  dualSystemEq.tpp  errCalc.cpp  errCalc_floatData.cpp  funInit.hpp  funInit.tpp  io.hpp  io.tpp  run_cmd.txt
